Name:                   haskell-code-snippets
Version:                0.0.0
Author:                 tonosaman
Maintainer:             tonosaman
License:                BSD3
License-File:           LICENSE
Synopsis:               Code snippets for Haskell
Description:            Using Cabal as test framework for doctest and hspec
Category:               Codec
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Codec.Base64
                      , Compiler.Utils.Bag
  Build-Depends:        base >= 4 && < 5
                      , array

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec >= 1.7
                      , QuickCheck
                      , haskell-code-snippets

Source-Repository head
  Type:                 git
  Location:             https://github.com/tonosaman/haskell-code-snippets
